--- a/.env
+++ b/.env
@@ -1,13 +1,24 @@
-VITE_FIREBASE_API_KEY=your_actual_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_actual_domain.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_actual_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_actual_bucket.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_actual_sender_id
-VITE_FIREBASE_APP_ID=your_actual_app_id
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyBaZBKploRRxGJDKgAUXyAPpj4MNxY2p_A
-VITE_EMAILJS_PUBLIC_KEY=D4bETlhHeb2L55Ddc
-VITE_EMAILJS_SERVICE_ID=service_o6x4s1o
-VITE_EMAILJS_TEMPLATE_ID=template_apz44ni
-VITE_ZOHO_CLIENT_ID=1000.YK4JA5DF0JIH9IW1ACOKMX7QG1073Y
-VITE_ZOHO_CLIENT_SECRET=3072be4bde7a2a79ed857d1c403d69f3352b0de557
-VITE_ZOHO_CALENDAR_UID=8c02d077c9c844f6a49bdf5d4e937a8c
+# Firebase config
+VITE_FIREBASE_API_KEY=your-firebase-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-project-domain.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-bucket.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
+
+# Google Maps API
+VITE_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Email.js config
+VITE_EMAILJS_PUBLIC_KEY=your-emailjs-public-key
+VITE_EMAILJS_SERVICE_ID=your-emailjs-service-id
+VITE_EMAILJS_TEMPLATE_ID=your-emailjs-template-id
+
+# Zoho integration
+VITE_ZOHO_CLIENT_ID=your-zoho-client-id
+VITE_ZOHO_CLIENT_SECRET=your-zoho-client-secret
+VITE_ZOHO_CALENDAR_UID=your-zoho-calendar-uid
+
+# HR Dashboard API
+VITE_API_BASE_URL=https://api.linklight.solutions
+VITE_API_TOKEN=your-api-token
